@@ -1,3 +1,10 @@
+2012-10-17 Roman
+- FIX:DAQ.SMH2Gi: Significant updated for fix some bug after testing on real hardware.
+    Broadcast write request for MR modules moved to controller level.
+    Alarms processing is added.
+- UI.WebVision: Childs update is added on "geomXsc" or "geomYsc" attributes modify.
+
+
 2012-10-13 Roman
 - FIX:DAQ.DAQGate: Attributes sync at start is fixed. Detected on MillLevel system, without saved attributes profile present.
     No already present remotely parameters removing, only for correct connection, is fixed.
